--- a/about us.html
+++ b/about us.html
@@ -195,9 +195,9 @@
         <p>&copy; 2023 Empowering the Nation. All rights reserved.</p>
         <p>Contact: Precious Radebe | Johannesburg, South Africa</p>
         <div class="social-icons">
-            <a href="#" aria-label="Facebook">📘</a>
-            <a href="#" aria-label="Instagram">📷</a>
-            <a href="#" aria-label="LinkedIn">💼</a>
+            <a href="#" aria-label="Facebook"></a>
+            <a href="#" aria-label="Instagram"></a>
+            <a href="#" aria-label="LinkedIn"></a>
         </div>
     </footer>
 </body>
