new html file created

--- a/webpage.html
+++ b/webpage.html
@@ -9,7 +9,7 @@
     <title>Empowering the Nation - Skills Training for Domestic Workers & Gardeners</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="logo.png" rel="stylesheet" />
 
     <style>
         /* Reset & Base Styles */
@@ -390,12 +390,7 @@
 
         sections.forEach(section => observer.observe(section));
 
-        // Form Submission
-        document.getElementById('requestForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Thank you for your request! We will contact you shortly.');
-            this.reset();
-        });
+
     </script>
 </body>
 </html>
