--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
     <title>Contact Us - Empowering the Nation</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="logo.png" rel="stylesheet" />
 
     <style>
-        /* Reset & Base Styles */
-        * {
-            margin: 0;
-            padding: 0;
+        /* Reset & Base */
+        *,
+        *::before,
+        *::after {
             box-sizing: border-box;
         }
 
@@ -24,49 +24,29 @@
             background: #f9f9f7;
             color: #333;
             line-height: 1.7;
-            scroll-behavior: smooth;
+            margin: 0;
+            padding: 0;
         }
 
-        /* Theme Colors */
         :root {
-            --primary: #2e8b57; /* Forest Green */
+            --primary: #2e8b57;
             --primary-dark: #1e6b40;
-            --accent: #ffcc00; /* Gold */
-            --light: #f8f9fa;
-            --dark: #1a1a1a;
-            --text: #333;
-            --gray: #666;
+            --accent: #ffcc00;
+            --white: #fff;
         }
 
-        /* Typography */
-        h1, h2, h3, h4 {
-            font-family: 'Poppins', sans-serif;
-            font-weight: 600;
-            color: var(--primary);
-        }
-
-        /* Layout */
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 1.5rem;
+            padding: 0 1rem;
         }
 
         /* Header & Navigation */
         header {
             background: var(--primary);
-            padding: 0.8rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
+            padding: 1rem 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .logo-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 0.5rem;
+            text-align: center;
         }
 
         .logo {
@@ -74,6 +54,7 @@
             height: auto;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            margin-bottom: 0.5rem;
         }
 
         nav {
@@ -86,40 +67,22 @@
             justify-content: center;
             list-style: none;
             flex-wrap: wrap;
+            gap: 0.5rem;
+            padding: 0;
+            margin: 0;
         }
 
-        nav ul li a {
+        nav a {
             color: #fff;
             text-decoration: none;
             font-weight: 600;
             padding: 0.6rem 1.2rem;
             border-radius: 30px;
-            margin: 0 0.5rem;
-            transition: all 0.3s ease;
         }
 
-        nav ul li a:hover,
-        nav ul li a.active {
+        nav a:hover,
+        nav a.active {
             background: var(--primary);
-            color: white;
-        }
-
-        /* Mobile Hamburger */
-        .menu-toggle {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-            margin-left: auto;
-            margin-right: 1rem;
-        }
-
-        .bar {
-            width: 25px;
-            height: 3px;
-            background: #fff;
-            margin: 3px 0;
-            transition: 0.3s;
-            border-radius: 2px;
         }
 
         /* Contact Section */
@@ -128,9 +91,10 @@
         }
 
         #contact h2 {
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             font-size: 2rem;
-            margin-bottom: 2rem;
+            margin: 0 auto 2rem;
             position: relative;
             display: inline-block;
         }
@@ -176,7 +140,8 @@
             color: var(--primary);
         }
 
-        input, textarea {
+        input,
+        textarea {
             padding: 0.8rem;
             border: 1px solid #ccc;
             border-radius: 6px;
@@ -186,16 +151,15 @@
 
         button[type="submit"] {
             background: var(--primary);
-            color: white;
+            color: var(--white);
             border: none;
             padding: 0.9rem 2rem;
             font-size: 1.1rem;
             font-weight: 600;
             border-radius: 30px;
             cursor: pointer;
-            transition: background 0.3s;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            align-self: flex-start;
+            width: fit-content;
         }
 
         button[type="submit"]:hover {
@@ -205,7 +169,7 @@
         /* Footer */
         footer {
             background: var(--primary);
-            color: white;
+            color: var(--white);
             text-align: center;
             padding: 2rem 1rem;
             margin-top: 3rem;
@@ -215,30 +179,10 @@
             margin: 0.5rem 0;
         }
 
-        .social-icons {
-            margin: 1rem 0;
-        }
-
-        .social-icons a {
-            color: white;
-            font-size: 1.3rem;
-            margin: 0 0.8rem;
-            text-decoration: none;
-        }
-
-        /* Responsive Design */
+        /* Responsive */
         @media (max-width: 768px) {
-            .menu-toggle {
-                display: flex;
-            }
-
-            nav ul {
-                flex-direction: column;
-                display: none;
-            }
-
-            nav ul.show {
-                display: flex;
+            #contact {
+                padding: 2rem 0;
             }
 
             .section-content {
@@ -248,43 +192,39 @@
             form {
                 gap: 0.8rem;
             }
+
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Header & Navigation -->
     <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="Empowering the Nation Logo" class="logo" />
-        </div>
+        <img src="logo.png" alt="Empowering the Nation Logo" class="logo" />
         <nav aria-label="Main Navigation">
-            <div class="menu-toggle" id="menuToggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul id="navMenu">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="index.html#courses">Courses</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="course.html">Courses</a></li>
+                <li><a href="contact.html" class="active" aria-current="page">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container">
-        <!-- Contact Section -->
         <section id="contact">
             <h2>Get In Touch</h2>
             <div class="section-content">
                 <div class="contact-info">
-                    <p><strong> Location:</strong> Johannesburg, South Africa</p>
-                    <p><strong> Phone:</strong> +27 XX XXX XXX</p>
-                    <p><strong> Email:</strong> info@empoweringthenation.co.za</p>
-                    <p><strong> Contact Person:</strong> Precious Radebe</p>
+                    <p><strong>Location:</strong> Johannesburg, South Africa</p>
+                    <p><strong>Phone:</strong> +27 XX XXX XXX</p>
+                    <p><strong>Email:</strong> info@empoweringthenation.co.za</p>
+                    <p><strong>Contact Person:</strong> Precious Radebe</p>
                 </div>
 
-                <form id="requestForm">
+                <form action="#" method="POST">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" required placeholder="Enter your full name">
 
@@ -303,18 +243,9 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2023 Empowering the Nation. All rights reserved.</p>
         <p>Contact: Precious Radebe | Johannesburg, South Africa</p>
-        <div class="social-icons">
-            <a href="#" aria-label="Facebook"></a>
-            <a href="#" aria-label="Instagram"></a>
-            <a href="#" aria-label="LinkedIn"></a>
-        </div>
     </footer>
-
-    <script>
-        // Mobile Menu Toggle
-        const menuToggle = document.getElementById('menuToggle');
-        const navMenu = document.getElementById('navMenu');
+</body>
+</html>
