--- a/contact.html
+++ b/contact.html
@@ -204,13 +204,13 @@
     <header>
         <img src="logo.png" alt="Empowering the Nation Logo" class="logo" />
         <nav aria-label="Main Navigation">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
-                <li><a href="contact.html" class="active" aria-current="page">Contact</a></li>
-            </ul>
-        </nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about us.html">About Us</a></li>
+    <li><a href="course.html">Courses</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
     </header>
 
     <main class="container">
@@ -219,7 +219,7 @@
             <div class="section-content">
                 <div class="contact-info">
                     <p><strong>Location:</strong> Johannesburg, South Africa</p>
-                    <p><strong>Phone:</strong> +27 XX XXX XXX</p>
+                    <p><strong>Phone:</strong> +27652388990 </p>
                     <p><strong>Email:</strong> info@empoweringthenation.co.za</p>
                     <p><strong>Contact Person:</strong> Precious Radebe</p>
                 </div>
