--- a/contact.html
+++ b/contact.html
@@ -9,237 +9,48 @@
     <title>Contact Us - Empowering the Nation</title>
 
     <!-- Google Fonts -->
-    <link href="logo.png" rel="stylesheet" />
-
-    <style>
-        /* Reset & Base */
-        *,
-        *::before,
-        *::after {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Open Sans', Arial, sans-serif;
-            background: #f9f9f7;
-            color: #333;
-            line-height: 1.7;
-            margin: 0;
-            padding: 0;
-        }
-
-        :root {
-            --primary: #2e8b57;
-            --primary-dark: #1e6b40;
-            --accent: #ffcc00;
-            --white: #fff;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-        }
-
-        /* Header & Navigation */
-        header {
-            background: var(--primary);
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        .logo {
-            width: 180px;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 0.5rem;
-        }
-
-        nav {
-            background: #000;
-            padding: 0.5rem 0;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: 600;
-            padding: 0.6rem 1.2rem;
-            border-radius: 30px;
-        }
-
-        nav a:hover,
-        nav a.active {
-            background: var(--primary);
-        }
-
-        /* Contact Section */
-        #contact {
-            padding: 4rem 0;
-        }
-
-        #contact h2 {
-            font-family: 'Poppins', sans-serif;
-            text-align: center;
-            font-size: 2rem;
-            margin: 0 auto 2rem;
-            position: relative;
-            display: inline-block;
-        }
-
-        #contact h2:after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px;
-            height: 3px;
-            background: var(--primary);
-        }
-
-        .section-content {
-            max-width: 900px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 2.5rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-        }
-
-        .contact-info {
-            margin-bottom: 2rem;
-            text-align: center;
-        }
-
-        .contact-info p {
-            font-size: 1.1rem;
-            margin: 0.5rem 0;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        label {
-            font-weight: 600;
-            color: var(--primary);
-        }
-
-        input,
-        textarea {
-            padding: 0.8rem;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            font-family: 'Open Sans', sans-serif;
-            font-size: 1rem;
-        }
-
-        button[type="submit"] {
-            background: var(--primary);
-            color: var(--white);
-            border: none;
-            padding: 0.9rem 2rem;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 30px;
-            cursor: pointer;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: fit-content;
-        }
-
-        button[type="submit"]:hover {
-            background: var(--primary-dark);
-        }
-
-        /* Footer */
-        footer {
-            background: var(--primary);
-            color: var(--white);
-            text-align: center;
-            padding: 2rem 1rem;
-            margin-top: 3rem;
-        }
-
-        footer p {
-            margin: 0.5rem 0;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            #contact {
-                padding: 2rem 0;
-            }
-
-            .section-content {
-                padding: 1.5rem;
-            }
-
-            form {
-                gap: 0.8rem;
-            }
-
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <img src="logo.png" alt="Empowering the Nation Logo" class="logo" />
         <nav aria-label="Main Navigation">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about us.html">About Us</a></li>
-    <li><a href="course.html">Courses</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about us.html">About Us</a></li>
+                <li><a href="course.html">Courses</a></li>
+                <li><a href="contact.html" class="active" aria-current="page">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main class="container">
-        <section id="contact">
+        <section id="contact" class="section-content">
             <h2>Get In Touch</h2>
-            <div class="section-content">
-                <div class="contact-info">
-                    <p><strong>Location:</strong> Johannesburg, South Africa</p>
-                    <p><strong>Phone:</strong> +27652388990 </p>
-                    <p><strong>Email:</strong> info@empoweringthenation.co.za</p>
-                    <p><strong>Contact Person:</strong> Precious Radebe</p>
-                </div>
-
-                <form action="#" method="POST">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" required placeholder="Enter your full name">
-
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required placeholder="Enter your email">
-
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Optional">
-
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required placeholder="How can we help you?"></textarea>
-
-                    <button type="submit">Send Message</button>
-                </form>
+            <div class="contact-info">
+                <p><strong>Location:</strong> Johannesburg, South Africa</p>
+                <p><strong>Phone:</strong> +27653388990 </p>
+                <p><strong>Email:</strong> info@empoweringthenation.co.za</p>
+                <p><strong>Contact Person:</strong> Precious Radebe</p>
             </div>
+
+            <form action="#" method="POST">
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" required placeholder="Enter your full name" autocomplete="name">
+
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email" autocomplete="email">
+
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" placeholder="Optional" autocomplete="tel">
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" required placeholder="How can we help you?"></textarea>
+
+                <button type="submit" class="submit-btn">Send Message</button>
+            </form>
         </section>
     </main>
 
