--- a/course.html
+++ b/course.html
@@ -10,7 +10,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-    <!-- External CSS -->
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -234,7 +234,7 @@
         <p>Contact: Precious Radebe | Johannesburg, South Africa</p>
     </footer>
 
-    <!-- Live Calculator -->
+    <!-- external Live Calculator -->
     <script>
         const checkboxes = document.querySelectorAll('input[type="checkbox"][data-price]');
         const subtotalEl = document.getElementById('subtotal');
